# geotoolz

./: .pre-commit-config.yaml  .release-please-manifest.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: ci.yml  label-pr.yml  pre-commit-autoupdate.yml  tests-extended.yml  typecheck.yml
api/augment/: index.html
api/cloud/: index.html
api/compositing/: index.html
api/core/: index.html
api/einx/: index.html
api/feature/: index.html
api/geom/: index.html
api/indices/: index.html
api/io/: index.html
api/learn/: index.html
api/mask/: index.html
api/matched_filter/: index.html
api/measure/: index.html
api/normalize/: index.html
api/plume/: index.html
api/qa/: index.html
api/radiometry/: index.html
api/readers/: index.html
api/restore/: index.html
api/segment/: index.html
api/spectral/: index.html
api/viz/: index.html
assets/make_diagrams/: index.html
catalog/: index.html
catalog/api/catalogs/: index.html
catalog/api/geoparquet/: index.html
catalog/api/geoslice/: index.html
catalog/api/loaders/: index.html
catalog/api/matchup/: index.html
catalog/api/reference/: index.html
catalog/api/sources/: index.html
catalog/api/staging/: index.html
catalog/assets/make_diagrams/: index.html
catalog/changelog/: index.html
catalog/cli/: index.html
catalog/concepts/: index.html
catalog/design/exact-grid-alignment/: index.html
catalog/design/query-matchup/: index.html
catalog/logging/: index.html
catalog/notebooks/end_to_end_lake_tahoe/: index.html
catalog/quickstart/: index.html
catalog/recipes/from-stac/: index.html
catalog/recipes/large-archives/: index.html
catalog/recipes/staging-and-bundles/: index.html
catalog/schema-versions/: index.html
concepts/: index.html
contributing/: index.html
design/query-matchup/: index.html
docs/: catalogs.md  concepts.md  geostack.md  index.md  io.md  normalization.md  patch_ops.md  patches.md  patching.md  quickstart.md  readers.md
docs/api/: augment.md  catalog.md  cloud.md  compositing.md  core.md  einx.md  feature.md  geom.md  indices.md  io.md  learn.md  mask.md  matched_filter.md  measure.md  normalize.md  patch.md  patches.md  plume.md  qa.md  radiometry.md  readers.md  reference.md  restore.md  segment.md  spectral.md  viz.md
docs/assets/: make_diagrams.py
docs/catalog/: changelog.md  cli.md  quickstart.md  schema-versions.md
docs/catalog/api/: catalogs.md  geoparquet.md  geoslice.md  loaders.md  matchup.md  reference.md  sources.md  staging.md
docs/catalog/assets/: make_diagrams.py
docs/catalog/design/: exact-grid-alignment.md
docs/catalog/recipes/: from-stac.md  large-archives.md
docs/design/: query-matchup.md
docs/notebooks/: catalog_backends.ipynb  catalog_duckdb.ipynb  catalog_intro.ipynb  catalog_patching.ipynb  catalog_set_algebra.ipynb  composition_core.ipynb  deployment_shapes.ipynb  image_processing.ipynb  operators_lake_tahoe.ipynb  patching_backends.ipynb  patching_geometries.ipynb  patching_intro.ipynb  patching_sampling.ipynb  patching_streaming.ipynb  patching_time.ipynb  pipeline_idioms.ipynb
docs/patcher/: concepts.md  decisions.md  index.md  observability.md  patching.md  quickstart.md
docs/patcher/api/: core.md  integrations.md  matched.md  ml.md  reference.md  spatial.md  temporal.md
docs/patcher/notebooks/: patcher_lake_tahoe.ipynb
docs/patcher/patching/: async-prefetch.md
docs/patcher/recipes/: on-error-policies.md  xarray-nd-patching.md
docs/recipes/: branching-pipelines.md  define-an-operator.md  integration-with-geocatalog-and-geopatcher.md
geostack/: index.html
io/: index.html
normalization/: index.html
notebooks/catalog_patching/: index.html
notebooks/composition_core/: index.html
notebooks/deployment_shapes/: index.html
notebooks/image_processing/: index.html
notebooks/operators_lake_tahoe/: index.html
notebooks/pipeline_idioms/: index.html
patch_ops/: index.html
patcher/: index.html
patcher/api/core/: index.html
patcher/api/integrations/: index.html
patcher/api/matched/: index.html
patcher/api/ml/: index.html
patcher/api/reference/: index.html
patcher/api/spatial/: index.html
patcher/concepts/: index.html
patcher/decisions/: index.html
patcher/observability/: index.html
patcher/patching/: index.html
patcher/quickstart/: index.html
quickstart/: index.html
readers/: index.html
recipes/branching-pipelines/: index.html
recipes/define-an-operator/: index.html
recipes/integration-with-geocatalog-and-geopatcher/: index.html
search/: search_index.json
src/geotoolz/: __init__.py  _obstore.py  model.py  patch_ops.py
src/geotoolz/_src/: blending.py  (+1 more)
tests/: test_augment.py  test_blend_matched.py  test_building_blocks.py  test_cloud.py  test_compositing.py  test_composition.py  test_composition_endtoend.py  test_control.py  test_coregister_cloud_vector.py  test_coregister_points.py  test_coregister_rtrl_stack.py  test_coregister_skeleton.py  test_einx.py  test_feature.py  test_forbid_in_yaml.py  test_geom.py  test_geotoolz.py  test_graph.py  test_hydra_zen.py  test_indices.py  test_io.py  test_learn.py  test_mask.py  test_matched_filter.py  test_measure.py  test_model.py  test_normalize.py  test_observers.py  test_obstore_pool.py  test_operator.py  test_patch_endtoend.py  test_patch_ops.py  test_patches.py  test_pickle.py  test_plume.py  test_qa.py  test_radiometry.py  test_readers.py  test_restore.py  test_segment.py  (+4 more)
tests/catalog/: conftest.py  test_domain.py  test_duckdb.py  test_inmemory.py  test_parquet.py  test_raster.py  test_streaming.py  test_vector.py  test_xarray.py
tests/patch/: test_aggregation.py  test_endtoend.py  test_geometry.py  test_get_config.py  test_ops.py  test_pickle.py  test_sampler.py  test_spatial_patcher.py  test_spatial_time.py  test_temporal_patcher.py  test_window.py
tests/types/: test_geoslice.py
(+146 files in other folders)
