[project]
name = "geotoolz"
version = "0.0.3"
description = "Composable Operator library for remote sensing on top of georeader.GeoTensor."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["remote-sensing", "geospatial", "operators", "pipelines", "georeader"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    # GeoTensor and the GeoData / AsyncGeoData protocols. Pinning to >=2.1
    # so the v2.0 numpy-subclass GeoTensor (with __array_ufunc__) is
    # available — that's the substrate the two-tier model depends on.
    "georeader-spaceml>=2.1",
    "numpy>=1.26",
    # KDTree (geopatcher PointDomain) + signal windows (Tukey/Gaussian).
    "scipy>=1.11",
    # `georeader.geotensor` imports `Self` from typing_extensions without
    # declaring it as a dep (upstream packaging bug in >=2.1). Pin it here
    # so a slim install of geotoolz (without the optional patch extras
    # that would otherwise drag it in transitively) still works.
    "typing-extensions>=4.0",
    # pandas IntervalIndex + pyproj.CRS underpin the GeoSlice / catalog
    # primitives, both of which are part of the base surface (catalog set
    # algebra works without the vector/xarray extras as long as we have
    # geopandas + shapely + pyproj). Promote them out of the [vector]
    # extra so `geotoolz.catalog.build_raster_catalog` works on a slim
    # install.
    "pandas>=2.1",
    "pyproj>=3.6",
    "geopandas>=0.14",
    "shapely>=2.0",
    # GeoParquet I/O for the catalog roundtrip. geopandas pulls pyarrow
    # only in its [io] extra, so depend on it explicitly here — without
    # it, `to_geoparquet` / `from_geoparquet` raise ImportError.
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Optional `hydra-zen` integration for declarative pipeline construction
# (see geotoolz §6.6). The core composition layer round-trips its own
# get_config() / __repr__ without hydra — this extra is only needed if
# you want `builds()` / `instantiate()` from YAML.
hydra = ["hydra-zen>=0.14"]
# geopatcher backend extras. Each `Field` adapter under `geotoolz.patch`
# guards its import so the base install stays slim and the user only
# pays for the substrates they actually use.
grid = ["xarray>=2024.1"]
vector = ["geopandas>=0.14", "shapely>=2.0"]
point = ["xvec>=0.4"]
xarray-raster = ["rioxarray>=0.15", "xarray>=2024.1"]
streaming = ["zarr>=3.0"]
patch-full = [
    "xarray>=2024.1",
    "geopandas>=0.14",
    "shapely>=2.0",
    "xvec>=0.4",
    "rioxarray>=0.15",
    "zarr>=3.0",
]
# Catalog extras. The base install already provides geopandas + shapely
# + pandas + pyproj (raster catalog works out of the box); these extras
# unlock the xarray and vector backends and the DuckDB-backed catalog.
catalog = ["xarray>=2024.1", "rioxarray>=0.15"]
# DuckDB backend (Phase 2 of the geodatabase). Pinned to >=1.1 because
# GeoParquet 1.1 bbox-column predicate pushdown landed there; older
# versions silently regress to slow ST_Intersects-per-row scans.
duckdb = ["duckdb>=1.1"]
catalog-full = [
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "zarr>=3.0",
    "duckdb>=1.1",
]

[project.urls]
Repository = "https://github.com/jejjohnson/geotoolz"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.11",
]
typecheck = [
    "ty>=0.0.35",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-jupyter>=0.26.3",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.10.8",
    "watermark>=2.4",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geotoolz"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
# Notebooks render to docs and use Greek/math glyphs (α, σ, ×, →) in
# axis labels and prose. RUF001/002/003 flag them as ambiguous, which is
# noise here. Line-length (E501) is also relaxed because long dict /
# tuple literals in tutorials are clearer on one line than split.
"*.ipynb" = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Optional-extra backends (xarray, geopandas, xvec, rioxarray, zarr) are
# guarded with try/except ImportError. Without the extras installed in the
# typecheck env, ty can't resolve them — that's expected and fine.
unresolved-import = "ignore"
# `geopandas = None` after a failed import is intentional; ty doesn't
# track the typing-redefinition pattern.
invalid-assignment = "ignore"
# rasterio.windows.Window doesn't carry parameter names in its stub, so
# `Window(col_off=..., row_off=...)` looks like unknown kwargs to ty.
unknown-argument = "ignore"
# `pandas-stubs`'s narrow Timestamp <-> NaTType union typing leaks into
# `Timestamp.floor()` results, into `pd.Interval(pd.NaT, ...)` (used as a
# sentinel for empty catalogs), and into `xarray.Dataset.where()` which
# is declared as `Dataset | DataArray`. None of these are real bugs.
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
# `gdf.index.left/right/overlaps` are real attrs on `IntervalIndex` but
# the base `Index` stub doesn't declare them, so ty flags them.
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/geotoolz --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/geotoolz"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Lowered from 80 -> 65 with the v0.1 geopatcher landing: many code paths
# (Approx* stubs that defer to v0.2, streaming zarr path, Grid/Vector/Point
# domain dispatches that require optional extras) aren't covered in the
# baseline test run. CI re-runs the extras-gated tests with the deps
# installed and would hit higher than this floor.
fail_under = 65
