[project]
name = "geotoolz"
version = "0.0.6"
description = "Composable Operator library for remote sensing on top of georeader.GeoTensor."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["remote-sensing", "geospatial", "operators", "pipelines", "georeader"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    # GeoTensor and the GeoData / AsyncGeoData protocols. Pinning to >=2.1
    # so the v2.0 numpy-subclass GeoTensor (with __array_ufunc__) is
    # available — that's the substrate the two-tier model depends on.
    "georeader-spaceml>=2.1",
    "numpy>=1.26",
    # Signal windows + numerical primitives used across the radiometry,
    # restore, augment, mask, spectral, and plume operator families.
    "scipy>=1.11",
    # `georeader.geotensor` imports `Self` from typing_extensions without
    # declaring it as a dep (upstream packaging bug in >=2.1). Pin it
    # here so a slim install (without optional extras that would
    # otherwise drag it in transitively) still works.
    "typing-extensions>=4.0",
    # pandas is used by `spectral` (band-name resolution) and `radiometry`
    # (per-band fitted stats); pyproj is used by `plume` (CRS-aware
    # advection geometry) and `geom` (reprojection ops). geopandas +
    # shapely are required by `plume`, `mask`, `io`, and `geom` for
    # vector-shape rasterisation and footprint algebra.
    "pandas>=2.1",
    "pyproj>=3.6",
    "geopandas>=0.14",
    "shapely>=2.0",
    "matplotlib>=3.10.8",
    # `georeader.GeoTensor.resize` imports skimage.transform.resize at runtime;
    # the geom Resize / Resample operators expose that path in the base API.
    "scikit-image>=0.25",
    # The Operator / Sequential / Graph composition layer lives in pipekit
    # (formerly geotoolz.core). Every per-domain operator subclasses
    # `pipekit.Operator`; the dependency is now load-bearing rather than
    # optional. See [tool.uv.sources] below for the dev-time source.
    "pipekit>=0.0.1",
]

[project.optional-dependencies]
# Optional `hydra-zen` integration for declarative pipeline construction
# (see geotoolz §6.6). The core composition layer round-trips its own
# get_config() / __repr__ without hydra — this extra is only needed if
# you want `builds()` / `instantiate()` from YAML.
hydra = ["hydra-zen>=0.14"]
# The four-axis Patcher framework lives in its own package now; pull it
# in (with its `[pipekit]` extra so `geopatcher.integrations.pipekit` is
# importable — the same wrappers ship from both locations) and use
# either `geotoolz.patch_ops` or `geopatcher.integrations.pipekit` for
# the Operator-graph bridge. The substrate extras (grid, vector, point,
# xarray-raster, streaming) are exposed through `geopatcher` directly —
# install e.g. `pip install 'geopatcher[patch-full]'` for the full
# substrate matrix.
patch = ["geopatcher[pipekit]"]
# Sensor reader format extras. Reader modules guard these imports so a base
# install stays slim and raises actionable installation instructions.
modis = ["pyhdf>=0.10"]
viirs = ["h5py>=3.0"]
goes = ["netcdf4>=1.6"]
mtg = ["netcdf4>=1.6"]
seviri = [] # No-op until a stable xRIT parser dependency is published.
himawari = [] # No-op because the HSD parser is expected to stay in-tree.
tropomi = ["netcdf4>=1.6"]
s3 = ["netcdf4>=1.6"]
all-sensors = [
    "geotoolz[modis,viirs,goes,mtg,seviri,himawari,tropomi,s3]",
]

[project.urls]
Repository = "https://github.com/jejjohnson/geotoolz"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.11",
]
typecheck = [
    "ty>=0.0.35",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-jupyter>=0.26.3",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.10.8",
    "watermark>=2.4",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Dev-time source for the `[patch]` extra: pull `geopatcher` from the
# extraction branch until the first PyPI release lands. This stanza
# affects `uv lock` / `uv sync` only — published wheel metadata still
# carries the PyPI-flavoured `geopatcher` requirement from
# `[project.optional-dependencies] patch = ["geopatcher"]` above.
geopatcher = { git = "https://github.com/jejjohnson/geopatcher", branch = "feat/pipekit-integration" }
# Dev-time source for the core `pipekit` dependency: pull from the
# monorepo on GitHub until the first PyPI release lands. Same caveat as
# above — published wheel metadata uses the PyPI-flavoured pin.
pipekit = { git = "https://github.com/jejjohnson/pipekit", subdirectory = "packages/pipekit" }

[tool.hatch.build.targets.wheel]
packages = ["src/geotoolz"]
artifacts = ["src/geotoolz/readers/*/data/**"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
# Notebooks render to docs and use Greek/math glyphs (α, σ, ×, →) in
# axis labels and prose. RUF001/002/003 flag them as ambiguous, which is
# noise here. Line-length (E501) is also relaxed because long dict /
# tuple literals in tutorials are clearer on one line than split.
"*.ipynb" = ["RUF001", "RUF002", "RUF003", "E501"]
# The RS operator modules carry LaTeX + Greek-letter math (ρ, ε, ×,
# em-dashes) in their docstrings — the formulas are the documentation.
# Same relaxation as notebooks: RUF ambiguity and E501 are noise here.
"src/geotoolz/indices/**/*.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"src/geotoolz/radiometry/**/*.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"src/geotoolz/cloud/**/*.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"src/geotoolz/geom/**/*.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"src/geotoolz/normalize/**/*.py" = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Optional-extra backends (xarray, xvec, rioxarray, zarr) are guarded
# with try/except ImportError. Without the extras installed in the
# typecheck env, ty can't resolve them — that's expected and fine.
unresolved-import = "ignore"
# `xarray = None` after a failed import is intentional; ty doesn't
# track the typing-redefinition pattern.
invalid-assignment = "ignore"
# rasterio.windows.Window doesn't carry parameter names in its stub, so
# `Window(col_off=..., row_off=..., width=..., height=...)` looks like
# unknown kwargs to ty.
unknown-argument = "ignore"
# Some call sites unify narrow typing-stub unions (xarray Dataset|DataArray,
# GeoData|ndarray, geopandas list|GeoDataFrame) in ways the stubs flag
# spuriously. None of these are real bugs.
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/geotoolz --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/geotoolz"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Optional-extra paths (e.g. the `hydra` integration, the geopatcher
# bridge tests) aren't always installed in the baseline coverage run.
# CI re-runs with extras enabled and would hit higher than this floor.
fail_under = 65
