[project]
name = "geotoolz-monorepo"
version = "0.0.0"
description = "geotoolz monorepo workspace root (not published — see packages/* for shipped libraries)."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
geotoolz = { workspace = true }
geotoolz-patcher = { workspace = true }
geotoolz-catalog = { workspace = true }
# The Operator / Sequential / Graph composition core lives in the pipekit
# monorepo. Pull it from GitHub until the first PyPI release lands; the
# published wheel metadata still carries the PyPI-flavoured `pipekit>=…`
# requirement from each member's [project] table.
pipekit = { git = "https://github.com/jejjohnson/pipekit", subdirectory = "packages/pipekit" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Workspace root ships no code; the per-package wheels live under packages/*.
bypass-selection = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
    # Property-based suites in geotoolz-patcher and geotoolz-catalog.
    "hypothesis>=6.152.9",
    # geotoolz-catalog test fixtures (NetCDF/HDF round-trips + bench gate).
    "h5netcdf>=1.3",
    "h5py>=3.10",
    "pytest-benchmark>=4.0",
    # Workspace members are dev-installed so tests can import them.
    "geotoolz",
    "geotoolz-patcher",
    "geotoolz-catalog",
]
lint = [
    "ruff>=0.15.11",
]
typecheck = [
    "ty>=0.0.35",
]
docs = [
    # mkdocstrings imports the packages to render API pages.
    "geotoolz",
    "geotoolz-patcher",
    "geotoolz-catalog",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-jupyter>=0.26.3",
    "jupytext>=1.19.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "watermark>=2.6.0",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships.
    "pygments>=2.19,<2.21",
]

# Root-level lint config applies to files outside packages/*; each member
# package keeps its own [tool.ruff] (ruff's nearest-pyproject discovery
# scopes per-package ignores like geotoolz's jaxtyping F722 correctly).
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
# The workspace sources live under packages/*/src, so root-level files
# (docs notebooks) need the first-party classification made explicit.
known-first-party = ["geotoolz", "geopatcher", "geocatalog"]

[tool.ty.environment]
python-version = "3.12"
